// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the AnalysisCollapsible in opened state matches the snapshot 1`] = `
<div
  className="sc-bdVaJa efvPnS"
>
  <div
    role="presentation"
  >
    <h3
      aria-level="3"
      role="heading"
    >
      <button
        aria-controls="AnalysisHeaderContentId"
        aria-expanded={true}
        className="sc-bwzfXH kkDEGu"
        id={undefined}
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="sc-htpNat bYQXEr sc-EHOje gGDgkd"
        />
        <span
          className="sc-bxivhb gsqksJ"
        >
           
          Problems (undefined)
           
        </span>
      </button>
    </h3>
  </div>
  <ul
    aria-labelledby="analysisHeaderButtonId"
    id={undefined}
    role="region"
  >
    <ul>
      <li>
         First item 
      </li>
      <li>
         Second item 
      </li>
      <li>
         Third item 
      </li>
      <li>
         Fourth item 
      </li>
    </ul>
  </ul>
</div>
`;

exports[`the default AnalysisCollapsible matches the snapshot 1`] = `
<div
  className="sc-bdVaJa efvPnS"
>
  <div
    role="presentation"
  >
    <h3
      aria-level="3"
      role="heading"
    >
      <button
        aria-controls="AnalysisHeaderContentId"
        aria-expanded={false}
        className="sc-bwzfXH kkDEGu"
        id={undefined}
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="sc-htpNat bYQXEr sc-ifAKCX dgWlkW"
        />
        <span
          className="sc-bxivhb gsqksJ"
        >
           
          Problems (undefined)
           
        </span>
      </button>
    </h3>
  </div>
  <ul
    aria-labelledby="analysisHeaderButtonId"
    id={undefined}
    role="region"
  >
    
  </ul>
</div>
`;
